💄 Update fix header mobile menu list z-index

--- a/src/main/header/_header.scss
+++ b/src/main/header/_header.scss
@@ -502,7 +502,7 @@
       background: #fff;
       padding: 26px 30px;
       transition: 0.5s;
-      z-index: 2;
+      z-index: 3;
 
       #gnbMo {
         position: absolute;
