--- a/src/sub/header/_header.scss
+++ b/src/sub/header/_header.scss
@@ -501,7 +501,7 @@
       background: #fff;
       padding: 26px 30px;
       transition: 0.5s;
-      z-index: 2;
+      z-index: 3;
 
       #gnbMo {
         position: absolute;
